force-app/main/default/objects/exception_log__c/exception_log__c.object-meta.xml
<CustomObject>
    <label>exception log</label>
    <nameField>
        <displayFormat>log-{0000}</displayFormat>
        <label>exception log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>exception logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>