force-app/main/default/objects/exception_log__c/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description>CLass Name</description>
    <label>ApexClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>