force-app/main/default/objects/exception_log__c/fields/ExceptionLine__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLine__c</fullName>
    <label>ExceptionLine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>