force-app/main/default/objects/exception_log__c/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <label>ExceptionMessage</label>
    <type>TextArea</type>
</CustomField>